--- a/README
+++ b/README
@@ -4,7 +4,11 @@ Installation
 How to Run the Program
 Using the Full Keyboard
 File System
+Fitness
 Adding Your Own Physical Keyboard
+
+- - - - - - - - - - - - - - - - - - - - - - - -
+
 
 INSTALLATION
 
@@ -15,6 +19,8 @@ INSTALLATION
 	./optimizer
 
 to run the program.
+
+This program is designed for a 64-bit platform. If you are using a 32-bit or smaller platform, it will run significantly slower.
 
 - - - - - - - - - - - - - - - - - - - - - - - -
 
@@ -28,7 +34,7 @@ USING THE FULL KEYBOARD
 
 The default setting is to evaluate the main 30 keys on the keyboard (this is how the program was originally written). You can also use it to evaluate the entire keyboard by changig it at runtime or by changing this line near the beginning of initValues() in values.c: 
 
-full_keyboard = [FK_SETTING]
+full_keyboard = <FK_SETTING>;
 
 To use the main 30 keys write FK_NO, for the full keyboard use FK_STANDARD, and for a full Kinesis keyboard use FK_KINESIS.
 
@@ -42,12 +48,27 @@ The full standard keyboard supposedly has 56 characters: 4 rows of 14. In truth 
  - 11 on the home row, from [29] to [39]
  - 10 on the bottom row, from [43] to [52]
 
+(m indicates a main-30 key, and k indicates an additional key.)
+
+  k k k k k k k k k k k k k
+    m m m m m m m m m m k k k
+    m m m m m m m m m m k
+    m m m m m m m m m m
+
 The full kinesis keyboard supposedly has 55 characters: 5 rows of 11. In truth it only has 47: 
  - 11 on the number row, from [0] to [10]
  - 11 on the top row, from [11] to [21]
  - 11 on the home row, from [22] to [32]
  - 10 on the bottom row, from [33] to [42]
  -  4 on the lowest row, from [44] to [45] and from [52] to [53].
+ 
+  k k k k k k k k k k k
+  m m m m m m m m m m k
+  m m m m m m m m m m k
+  m m m m m m m m m m
+  k k             k k
+
+(Notice that Kinesis has 56 keys but there are two backslashes so this program only recognizes 55.)
 
 The costs for individual keys on the keyboard must be edited from inside the source code. Change costsCopy in initValues() in values.c to change the costs for the individual keys. Then run "make" again to re-compile the source code.
 
@@ -79,6 +100,12 @@ values.h: Contains various constants as well as the fitness costs.
 values.c: Contains some fitness costs as arrays.
 
  - - - - - - - - - - - - - - - - - - - - - - - -
+FITNESS
+
+See Fitness.txt.
+ 
+ 
+ - - - - - - - - - - - - - - - - - - - - - - - -
 
 ADDING YOUR OWN PHYSICAL KEYBOARD
 
@@ -89,14 +116,21 @@ By default there are three options for physical keyboards: a keyboard with just 
 	#define FK_NO 0
 	#define FK_STANDARD 1
 	#define FK_KINESIS 2
-
+	// ...
+	
 Add this line to the end: 
 
-	#define FK_BINARY 3
+	#define FK_BINARY 10
 
-It doesn't matter what number you give as long as no other keyboard uses the same number (so you can't use 0, 1, or 2).
+It doesn't matter what number you give as long as no other keyboard uses the same number.
 
-2. In values.c there's a function called initValues() containing code that looks like this: 
+2. In tools.c near the bottom there's a function called setksize(). It sets the size of the keyboard. Add your keyboard to the switch statement, like so: 
+
+	case FK_BINARY:
+		ksize = 2; /* The size of the keyboard in this case is 2 */
+		break;
+
+3. In values.c there's a function called initValues() containing code that looks like this: 
 
 	if (full_keyboard == FK_NO) {
 		// Set keyboard position costs manually. These costs were determined by looking at how the positions were valued on some of the best alternative layouts.
@@ -131,4 +165,4 @@ Add a new section that looks like this:
 			distanceCosts[i] = costsCopy[i];
 	}
 
-2. In tools.c there's a function called initKeyboardData(). It includes all the data for each keyboard, including fingerCopy[], rowCopy[], homeRow, handCopy[], isCenterCopy[], isOutsideCopy[], printItCopy[], indicesCopy[]. You'll have to create one of each of these. See tools.h for an explanation of what they each do. (In tools.h the names don't contain the word 'Copy'.)
+4. In tools.c there's a function called initKeyboardData(). It includes all the data for each keyboard, including fingerCopy[], rowCopy[], homeRow, handCopy[], isCenterCopy[], isOutsideCopy[], printItCopy[], indicesCopy[]. You'll have to create one of each of these. See tools.h for an explanation of what they each do. (In tools.h the names don't contain the word 'Copy'.)
