--- a/README
+++ b/README
@@ -1,11 +1,20 @@
 CONTENTS
 
+About
 Installation
 How to Run the Program
 Using the Full Keyboard
 File System
 Fitness
 Adding Your Own Physical Keyboard
+
+- - - - - - - - - - - - - - - - - - - - - - - -
+
+ABOUT
+
+This is a program designed to efficiently optimize keyboard layouts, inspired by the work done by Peter Klausler. It uses a (relatively) friendly command-line interface to allow the user to customize a keyboard layout.
+
+I began developing this program in 2008 and have been working on it since then. For updates, see http://mathematicalmulticore.wordpress.com/category/keyboards/ and https://github.com/MTGandP/Typing.
 
 - - - - - - - - - - - - - - - - - - - - - - - -
 
@@ -34,17 +43,13 @@ USING THE FULL KEYBOARD
 
 The default setting is to evaluate the main 30 keys on the keyboard (this is how the program was originally written). You can also use it to evaluate the entire keyboard by changig it at runtime or by changing this line near the beginning of initValues() in values.c: 
 
-full_keyboard = <FK_SETTING>;
+fullKeyboard = <FK_SETTING>;
 
 To use the main 30 keys write FK_NO, for the full keyboard use FK_STANDARD, and for a full Kinesis keyboard use FK_KINESIS.
 
 For the more casual keyboard optimizer I recommended just optimizing the main 30 keys, as the other keys don't have a very large effect and the rarer keys are much more difficult to re-learn. But if you want maximum optimization, this is the option for you. This option can use a standard keyboard or the Kinesis Advantage Pro keyboard (if you're willing to go to the trouble of re-learning your entire keyboard then you may as well buy a top-of-the-line ergonomic keyboard too).
 
 The full standard keyboard supposedly has 56 characters: 4 rows of 14. In truth it only has 47: 
- - 13 on the number row, from [0] to [12]
- - 13 on the top row, from [15] to [26]
- - 11 on the home row, from [29] to [39]
- - 10 on the bottom row, from [43] to [52]
 
 (m indicates a main-30 key, and k indicates an additional key.)
 
@@ -53,20 +58,14 @@ The full standard keyboard supposedly has 56 characters: 4 rows of 14. In truth 
     m m m m m m m m m m k
     m m m m m m m m m m
 
-The full kinesis keyboard supposedly has 55 characters: 5 rows of 11. In truth it only has 47: 
- - 11 on the number row, from [0] to [10]
- - 11 on the top row, from [11] to [21]
- - 11 on the home row, from [22] to [32]
- - 10 on the bottom row, from [33] to [42]
- -  4 on the lowest row, from [44] to [45] and from [52] to [53].
+The full kinesis keyboard supposedly has 72 keys: 6 rows of 12. In truth it only has 50: 
  
   k k k k k k k k k k k
   m m m m m m m m m m k
   m m m m m m m m m m k
   m m m m m m m m m m
   k k             k k
-
-(Notice that Kinesis has 56 keys but there are two backslashes so this program only recognizes 55.)
+  k k               k k // thumb keys
 
 The costs for individual keys on the keyboard must be edited from inside the source code. Change costsCopy in initValues() in values.c to change the costs for the individual keys. Then run "make" again to re-compile the source code.
 
