--- a/doc/README
+++ b/doc/README
@@ -41,9 +41,9 @@ USING THE FULL KEYBOARD
 
 The default setting is to evaluate the main 30 keys on the keyboard (this is how the program was originally written). You can also use it to evaluate the entire keyboard by changig it at runtime or by changing this line near the beginning of initValues() in values.c: 
 
-fullKeyboard = <FK_SETTING>;
+fullKeyboard = <K_SETTING>;
 
-To use the main 30 keys write FK_NO, for the full keyboard use FK_STANDARD, and for a full Kinesis keyboard use FK_KINESIS.
+To use the main 30 keys write K_NO, for the full keyboard use K_STANDARD, and for a full Kinesis keyboard use K_KINESIS.
 
 For the more casual keyboard optimizer I recommended just optimizing the main 30 keys, as the other keys don't have a very large effect and the rarer keys are much more difficult to re-learn. But if you want maximum optimization, this is the option for you. This option can use a standard keyboard or the Kinesis Advantage Pro keyboard (if you're willing to go to the trouble of re-learning your entire keyboard then you may as well buy a top-of-the-line ergonomic keyboard too).
 
@@ -100,30 +100,30 @@ See Fitness.txt.
 
 ADDING YOUR OWN PHYSICAL KEYBOARD
 
-By default there are three options for physical keyboards: a keyboard with just the main 30 keys (FK_NO), a full standard keyboard (FK_STANDARD), and a Kinesis keyboard (FK_KINESIS). You can add your own physical keyboard by modifying the source code in a few places. Let's say you want to add a keyboard called Binary which only has two keys on it. You would have to follow these steps.
+By default there are three options for physical keyboards: a keyboard with just the main 30 keys (K_NO), a full standard keyboard (K_STANDARD), and a Kinesis keyboard (K_KINESIS). You can add your own physical keyboard by modifying the source code in a few places. Let's say you want to add a keyboard called Binary which only has two keys on it. You would have to follow these steps.
 
 1. At the beginning of values.h, you will see this: 
 
-	#define FK_NO 0
-	#define FK_STANDARD 1
-	#define FK_KINESIS 2
+	#define K_NO 0
+	#define K_STANDARD 1
+	#define K_KINESIS 2
 	// ...
 	
 Add this line to the end: 
 
-	#define FK_BINARY 10
+	#define K_BINARY 10
 
 It doesn't matter what number you give as long as no other keyboard uses the same number.
 
 2. In tools.c near the bottom there's a function called setksize(). It sets the size of the keyboard. Add your keyboard to the switch statement, like so: 
 
-	case FK_BINARY:
+	case K_BINARY:
 		ksize = 2; /* The size of the keyboard in this case is 2 */
 		break;
 
 3. In values.c there's a function called initValues() containing code that looks like this: 
 
-	if (full_keyboard == FK_NO) {
+	if (full_keyboard == K_NO) {
 		// Set keyboard position costs manually. These costs were determined by looking at how the positions were valued on some of the best alternative layouts.
 		long long costsCopy[KSIZE_MAX] = {
 			70,  35,  30,  40,  60,  80,  40,  30,  35,  70, 
@@ -135,11 +135,11 @@ It doesn't matter what number you give as long as no other keyboard uses the sam
 
 	// ...
 		
-	} else if (full_keyboard == FK_STANDARD) {
+	} else if (full_keyboard == K_STANDARD) {
 		
 	// ...
 
-	} else if (full_keyboard == FK_KINESIS) {
+	} else if (full_keyboard == K_KINESIS) {
 		
 	// ...
 		
@@ -147,7 +147,7 @@ It doesn't matter what number you give as long as no other keyboard uses the sam
 
 Add a new section that looks like this: 
 
-	if (full_keyboard == FK_BINARY) {
+	if (full_keyboard == K_BINARY) {
 		long long costsCopy[KSIZE_MAX] = {
 			// Whatever you want the costs for each index to be. In this case, the first index costs 10 and the second costs 5.
 			10, 5
