--- a/doc/TODO.org
+++ b/doc/TODO.org
@@ -1,9 +1,9 @@
-* SHORT-TERM
+* Short-Term
 ** TODO In README, describe how to generate typing data with different settings.
 ** TODO Put frequency statistics program into Typing GitHub
 ** TODO Respond to Yarick Antonov's email.
 ** TODO Set up donations
-* BIG CHANGES
+* Big Changes
 ** TODO Add unit tests.
 ** TODO Add convergence hacks to the multithreaded algorithm.
 ** TODO Make it easier to change the keys on a keyboard (i.e. for other languages).
@@ -12,14 +12,14 @@
 ** TODO Use trigraphs; try to make a layout with two rolls on one hand plus one key on the other. Do something like Carpalx.
 ** TODO Write a subroutine that automatically generates a .keylayout file for any platform.
 ** TODO Implement tab and thumb keys for the standard keyboard.
-* SMALL CHANGES
+* Small Changes
 ** TODO In GTBRec(), if GTBBruteForce() runs, it could take a longer or shorter amount of time than everything else. Try to minimize downtime for multithreading.
 ** TODO Check to see which keys change between best layouts, and integrate that into smartMutate().
 ** TODO Instead of running GTB on the single best every time, run it on the best of the run with some probability.
 ** TODO Moving further along one hand costs more. For example, moving from a pinky to an index finger costs more than moving from a middle finger to an index finger.
 ** TODO Every movement from one finger to another has its own specific cost.
 ** TODO Create an option to not use shifted keys.
-* REFACTORING
+* Refactoring
 ** TODO Modify code to take advantage of C99.
 ** TODO Change initTypingData() to avoid repetition.
 ** TODO Make getCommands() less messy.
@@ -30,11 +30,12 @@
 ** TODO Make functions statis where possible.
 ** TODO For functions that don't modify Keyboard k, pass it in directly instead of passing a pointer.
 ** TODO "compare" doesn't return a helpful error message. You have to type "compare ". Similarly for all inputs that require one or more arguments.
-* BUGS
+* Bugs
 ** TODO compileTypingData() crashes.
+*** Refactor layoutFromFile() to take a filename instead of a file; then, in error messages, print the filename along with the error.
 ** TODO GTBBF() sometimes duplicates a character. Re-enable it and fix bugs.
 ** TODO shortcutCosts only works for K_NO.
 ** TODO runAlgorithm() occasionally prints the same layout twice in a row.
-* MISCELLANEOUS 
+* Miscellaneous 
 ** TODO Convert layouts in allLayouts.txt to full-layout form.
 ** TODO Get the Brown corpus and use it to produce frequencies.
